# Flower-Vendor-Saas

./: .env.example  .gitignore  API_USAGE_EXAMPLE.md  AUDIT_WARNING_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  DAILY_SALES_ENHANCED_REQUIREMENTS.md  DAILY_SALES_GROUP_FIX.md  DEPLOY_FIXES_COMMANDS.md  DLT_IMPLEMENTATION_CHECKLIST.md  DLT_INTEGRATION_SUMMARY.md  DROPDOWN_VISUAL_GUIDE.md  Dockerfile  ERP_ENTER_NAVIGATION_DOCS.md  FIXES_IMPLEMENTED.md  KEYBOARD_NAVIGATION_AUDIT.md  KEYBOARD_NAVIGATION_AUDIT_CLEANUP_SUMMARY.md  KEYBOARD_NAVIGATION_CHECKLIST.md  KEYBOARD_NAVIGATION_IMPLEMENTATION_SUMMARY.md  KEYBOARD_UX_GUIDE.md  MASTER_ADMIN_SETUP.md  NAVIGATION_FIXES_SUMMARY.md  OBSERVABILITY.md  PAID_AMOUNT_FIX_SUMMARY.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_SANITY_AUDIT_REPORT.md  PROFESSIONAL_DROPDOWN_NAVIGATION.md  RATE_LIMITER_FALLBACK_VERIFICATION.md  README.md  REPORT_404_DIAGNOSIS.md  REPORT_DATA_FETCHING_FIXES.md  REPORT_DATA_MAPPING.md  REPORT_ENDPOINT_FIXES_SUMMARY.md  REPORT_PRINT_SYSTEM_GUIDE.md  SAALA_DUPLICATE_FIX.md  SAALA_SILK_FIXES_SUMMARY.md  SECURITY_HARDENING_REPORT.md  SECURITY_VERIFICATION_CHECKLIST.md  SMS_SINGLE_CUSTOMER_DAILY_SALE_SOLUTION.md  (+31 more)
backend/: .dockerignore  .env.sms.example  .env.test  BSNL_DLT_SETUP.md  DOCKER_SETUP.md  DOCX_PRINTING.md  Dockerfile  PRINT_SYSTEM.md  TEMPLATE_PLACEHOLDERS.md  alembic.ini  check_db.py  check_password.py  check_record.py  check_saala.py  (+24 more)
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: main.rs
(+204 files in other folders)
